Improve Issue Contrast

--- a/styles/after-loading.css
+++ b/styles/after-loading.css
@@ -149,5 +149,5 @@ footer p {
     background-color: var(--triadb);
     margin-top: var(--size-2);
     font-size: var(--size-1);
-    color: var(--whitetone);
+    color: var(--blacktone);
 }
